# plex-ingest

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.claude/: settings.json
.github/workflows/: lint.yml  pytest.yml  security.yml
dbt_project/: dbt_project.yml  profiles.yml
dbt_project/models/staging/: schema.yml  sources.yml  stg_movies.sql
docs/: pipeline-design.md  vector-store-contract.md
scripts/: cleanup_old_partition_namespaces.py  migrate_ids_to_tmdb.py  verify_synopsis_matches.py
src/plex_ingest/: definitions.py
src/plex_ingest/defs/: partitions.py
src/plex_ingest/defs/assets/: embeddings.py  enrichment.py  qdrant_collection.py  raw_movies.py  stg_watch_history.py  streaming_runtime.py  synopsis.py  watch_history_embeddings.py  watch_history_qdrant_collection.py
src/plex_ingest/defs/checks/: synopsis_match.py
src/plex_ingest/defs/resources/: duckdb.py  embeddings.py  enrichment_llm.py  omdb.py  partition_json_io_manager.py  plex.py  plex_watch_history.py  qdrant.py  scraper.py  synopsis_judge.py
src/plex_ingest/defs/schedules/: poll_plex_daily.py
src/plex_ingest/defs/sensors/: run_dedup.py  sync_imdb_id_partitions.py  sync_tmdb_id_partitions.py  sync_watch_history_partitions.py
src/plex_ingest/defs/staging/: defs.yaml
src/plex_ingest/lib/: media_source.py  ports.py  stg_movies_reader.py  streaming_runtime_store.py  vector_store_contract.py  watch_history_reader.py
src/plex_ingest/lib/adapters/: gemini_embeddings.py  gemini_enrichment.py  groq_synopsis_judge.py  omdb_client.py  playwright_scraper.py  plex_catalog.py  plex_watch_history.py  qdrant_store.py
tests/integration/: test_automation_condition_cold_start.py  test_qdrant_collection_waits_for_pipeline_settle.py  test_scraper_live.py
tests/unit/: test_embeddings.py  test_embeddings_resource.py  test_enrichment.py  test_enrichment_llm.py  test_partition_json_io_manager.py  test_plex_resource.py  test_plex_watch_history_resource.py  test_qdrant_collection.py  test_qdrant_resource.py  test_run_dedup.py  test_scraper.py  test_stg_movies_reader.py  test_stg_watch_history.py  test_streaming_runtime.py  test_sync_imdb_id_partitions.py  test_sync_tmdb_id_partitions.py  test_sync_watch_history_partitions.py  test_synopsis.py  test_synopsis_judge.py  test_synopsis_match_check.py  test_watch_history_embeddings.py  test_watch_history_qdrant_collection.py
tests/unit/adapters/: test_gemini_embeddings.py  test_gemini_enrichment.py  test_groq_synopsis_judge.py  test_omdb_client.py  test_playwright_scraper.py  test_plex_catalog.py  test_plex_watch_history.py
